--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="columns is-centered">
         <div class="column is-9 has-text-centered">
           <h1 class="title is-1">Collision- and Reachability-Aware Multi-Robot Control with Grounded LLM Planners</h1>
-          <h2 class="subtitle is-4"><b>ICLR 2026 Submission, Under Review</b></h2>
+          <h2 class="subtitle is-4"><b>Anonymous Submission, Under Review</b></h2>
         </div>
       </div>
     </div>
